--- a/bookingsystem/package.json
+++ b/bookingsystem/package.json
@@ -14,7 +14,10 @@
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "pg": "^7.4.1",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.33.4"
   },
   "devDependencies": {
     "nodemon": "^1.15.1"
