--- a/bookingsystem/server/config/config.json
+++ b/bookingsystem/server/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "karlpet",
     "password": null,
-    "database": "bookingsystem",
+    "database": "bookingsystem-dev",
     "host": "127.0.0.1",
     "port": 5432,
     "dialect": "postgres"
