--- a/bookinginterface/package.json
+++ b/bookinginterface/package.json
@@ -8,6 +8,7 @@
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1",
+    "react-select-box": "^3.0.1",
     "react-week-calendar": "^0.1.1"
   },
   "scripts": {
